[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Toothbrush.gd" type="Script" id=1]
[ext_resource path="res://assets/art/probably not living objects/toothbrush.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx/toothbrush pick up.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="Animation" id=2]
resource_name = "Clicked"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -1 ) ]
}

[node name="Toothbrush" type="Area2D"]
position = Vector2( 185, -64 )
collision_layer = 512
collision_mask = 512
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Clicked = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PickUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="AuraTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Toothbrush_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Toothbrush_mouse_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="AuraTimer" to="." method="_on_AuraTimer_timeout"]
